Bitcoin(Extended)Client: listUnspent param changes, use JDK 9 to simplify
* listUnspent: Change Iterable<Address> to List<Address>
* listUnspent: Add convenience overload that takes a single address
* listUnspent: Boolean (rather than boolean) for includeUnsafe
* BitcoinExtendedClient: Use new listUnspent overload and List.of() to simplify
* RegTestFundingSource: Simplify calcChange, use Map.of(), other simplifications